WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124525
[GStreamer] Crash when using media source
https://bugs.webkit.org/show_bug.cgi?id=124525
Summary
[GStreamer] Crash when using media source
Brendan Long
Reported
2013-11-18 11:08:01 PST
To reproduce, build WebKitGTK, go to this page, and click load:
http://dashif.org/reference/players/javascript/0.2.5/index.html
I get this output: ASSERTION FAILED: !m_adoptionIsRequired ../../Source/WTF/wtf/RefCounted.h(59) : void WTF::RefCountedBase::ref() 1 0x7f141b2cc48e /home/blong/workspace/webkit/WebKitBuild/Debug/.libs/libjavascriptcoregtk-3.0.so.0(WTFCrash+0x1e) [0x7f141b2cc48e] 2 0x7f141ccdca19 /home/blong/workspace/webkit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x135ea19) [0x7f141ccdca19] 3 0x7f141df50f5f /home/blong/workspace/webkit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x25d2f5f) [0x7f141df50f5f] 4 0x7f141df50dad /home/blong/workspace/webkit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x25d2dad) [0x7f141df50dad] 5 0x7f141df509e2 /home/blong/workspace/webkit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore20MediaSourceGStreamerC1EP15_WebKitMediaSrc+0x5e) [0x7f141df509e2] 6 0x7f141df50932 /home/blong/workspace/webkit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore20MediaSourceGStreamer4openEN3WTF10PassRefPtrINS_15HTMLMediaSourceEEEP15_WebKitMediaSrc+0x4a) [0x7f141df50932] 7 0x7f141e19716c /home/blong/workspace/webkit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore27MediaPlayerPrivateGStreamer13sourceChangedEv+0x20a) [0x7f141e19716c] 8 0x7f141e190eff /home/blong/workspace/webkit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x2812eff) [0x7f141e190eff] 9 0x301000fa28 /lib64/libgobject-2.0.so.0(g_closure_invoke+0x138) [0x301000fa28] 10 0x3010020a3d /lib64/libgobject-2.0.so.0() [0x3010020a3d] 11 0x3010028829 /lib64/libgobject-2.0.so.0(g_signal_emit_valist+0xef9) [0x3010028829] 12 0x3010028a72 /lib64/libgobject-2.0.so.0(g_signal_emit+0x82) [0x3010028a72] 13 0x3010013da5 /lib64/libgobject-2.0.so.0() [0x3010013da5] 14 0x7f141a3f0394 /home/blong/gst/git/gstreamer/gst/.libs/libgstreamer-1.0.so.0(+0x2a394) [0x7f141a3f0394] 15 0x30100156db /lib64/libgobject-2.0.so.0(g_object_notify+0x16b) [0x30100156db] 16 0x7f13aee76762 /home/blong/gst/git/gst-plugins-base/gst/playback/.libs/libgstplayback.so(+0x1e762) [0x7f13aee76762] 17 0x301000fa28 /lib64/libgobject-2.0.so.0(g_closure_invoke+0x138) [0x301000fa28] 18 0x3010020a3d /lib64/libgobject-2.0.so.0() [0x3010020a3d] 19 0x3010028829 /lib64/libgobject-2.0.so.0(g_signal_emit_valist+0xef9) [0x3010028829] 20 0x3010028a72 /lib64/libgobject-2.0.so.0(g_signal_emit+0x82) [0x3010028a72] 21 0x3010013da5 /lib64/libgobject-2.0.so.0() [0x3010013da5] 22 0x7f141a3f0394 /home/blong/gst/git/gstreamer/gst/.libs/libgstreamer-1.0.so.0(+0x2a394) [0x7f141a3f0394] 23 0x30100156db /lib64/libgobject-2.0.so.0(g_object_notify+0x16b) [0x30100156db] 24 0x7f13aee70e7c /home/blong/gst/git/gst-plugins-base/gst/playback/.libs/libgstplayback.so(+0x18e7c) [0x7f13aee70e7c] 25 0x7f141a413d52 /home/blong/gst/git/gstreamer/gst/.libs/libgstreamer-1.0.so.0(gst_element_change_state+0x22) [0x7f141a413d52] 26 0x7f141a41442c /home/blong/gst/git/gstreamer/gst/.libs/libgstreamer-1.0.so.0(+0x4e42c) [0x7f141a41442c] 27 0x7f141a3f9e46 /home/blong/gst/git/gstreamer/gst/.libs/libgstreamer-1.0.so.0(+0x33e46) [0x7f141a3f9e46] 28 0x7f141a431df4 /home/blong/gst/git/gstreamer/gst/.libs/libgstreamer-1.0.so.0(+0x6bdf4) [0x7f141a431df4] 29 0x7f13aee794a7 /home/blong/gst/git/gst-plugins-base/gst/playback/.libs/libgstplayback.so(+0x214a7) [0x7f13aee794a7] 30 0x7f141a413d52 /home/blong/gst/git/gstreamer/gst/.libs/libgstreamer-1.0.so.0(gst_element_change_state+0x22) [0x7f141a413d52] 31 0x7f141a413f4a /home/blong/gst/git/gstreamer/gst/.libs/libgstreamer-1.0.so.0(gst_element_change_state+0x21a) [0x7f141a413f4a]
Attachments
Patch
(1.58 KB, patch)
2013-11-18 11:37 PST
,
Brendan Long
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brendan Long
Comment 1
2013-11-18 11:37:34 PST
Created
attachment 217217
[details]
Patch
Philippe Normand
Comment 2
2013-11-18 13:21:15 PST
Comment on
attachment 217217
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=217217&action=review
Oh, good catch, Brendan!
> Source/WebCore/ChangeLog:8 > + No new tests because this is already covered by tests in media/media-source (which aren't enabled because the feature isn't done).
Some tests are actually enabled I think. But far from the majority.
WebKit Commit Bot
Comment 3
2013-11-18 13:46:43 PST
Comment on
attachment 217217
[details]
Patch Clearing flags on attachment: 217217 Committed
r159454
: <
http://trac.webkit.org/changeset/159454
>
WebKit Commit Bot
Comment 4
2013-11-18 13:46:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug