[GStreamer] Crash when using media source https://bugs.webkit.org/show_bug.cgi?id=124525

Patch by Brendan Long <b.long@cablelabs.com> on 2013-11-18
Reviewed by Philippe Normand.

No new tests because this is already covered by tests in media/media-source (which aren't enabled because the feature isn't done).

* platform/graphics/gstreamer/MediaSourceGStreamer.cpp:
(WebCore::MediaSourceGStreamer::MediaSourceGStreamer): Add missing adoptRef()

Canonical link: https://commits.webkit.org/142720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159454 268f45cc-cd09-0410-ab3c-d52691b4dbfc